package ConreteClasses;

import abstractclasses.AbstractPlayer;
import interfaces.Player;

import java.util.List;

public class ConcretePlayer extends AbstractPlayer {

    @Override
    public Color getColor() {
        return null;
    }

    @Override
    public List<Piece> getCapturedPieces() {
        return null;
    }
}
